[gd_scene load_steps=3 format=3 uid="uid://cd6pj5homenki"]

[ext_resource type="Script" path="res://overworld/interactables/interactable.gd" id="1_uakwy"]
[ext_resource type="PackedScene" uid="uid://ct27r3y3ao3um" path="res://decorators/fade_decorator.tscn" id="2_0rgp8"]

[node name="Interactable" type="CharacterBody2D"]
z_index = 200
position = Vector2(8, 8)
collision_layer = 4
collision_mask = 5
script = ExtResource("1_uakwy")

[node name="Sprite" type="AnimatedSprite2D" parent="."]

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]

[node name="Label" type="RichTextLabel" parent="."]
offset_left = -62.0
offset_top = -35.0
offset_right = 61.0
offset_bottom = -12.0
bbcode_enabled = true
text = "[center]Label[/center]"

[node name="FadeDecorator" parent="Label" instance=ExtResource("2_0rgp8")]
fade_speed = 5.0

[node name="ColPoly" type="CollisionPolygon2D" parent="."]

[connection signal="area_entered" from="InteractionArea" to="." method="_on_player_interaction_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_player_interaction_area_exited"]
